--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+application-oauth.yml
+application-apiKey.yml
+
 
 ### STS ###
 .apt_generated
