--- a/module-admin/build.gradle
+++ b/module-admin/build.gradle
@@ -1,9 +1,9 @@
 dependencies {
-    implementation project(':module-core')
+//    implementation project(':module-core')
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
     implementation 'org.springframework.session:spring-session-core'
-
+    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 }
