--- a/module-admin/src/main/resources/application.yml
+++ b/module-admin/src/main/resources/application.yml
@@ -1,3 +1,7 @@
+application:
+  title: 새식일기
+  version: 1.0v
+
 spring:
   profiles:
     include: oauth, apiKey
@@ -5,8 +9,12 @@ spring:
       local: local
       prod : prod
       dev : dev
-#  jpa:
-#    database: mysql
-#    # database-platform: org.hibernate.dialect.MySQL8Dialect
-#    hibernate:
-#      ddl-auto: validate
+
+
+logging:
+  level:
+#    root: debug
+#    org:
+#      hibernate: debug
+    sql: debug
+
