--- a/module-core/build.gradle
+++ b/module-core/build.gradle
@@ -1,5 +1,10 @@
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+
+    implementation 'com.h2database:h2'
+
 }
 
 test {
