--- a/module-core/src/main/resources/application-local.yml
+++ b/module-core/src/main/resources/application-local.yml
@@ -5,7 +5,7 @@ spring:
       on-profile: local
 
   datasource:
-    url: jdbc:h2:mem:testdb;MODE=MySQL
+    jdbc-url: jdbc:h2:mem:testdb;MODE=MySQL
     driver-class-name: org.h2.Driver
     username: sa
     password:
