--- a/module-core/build.gradle
+++ b/module-core/build.gradle
@@ -9,6 +9,8 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'com.h2database:h2'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
 
 }
 
