feat: 파일 다운로드 기능 구현 진행 중
1. 파일 엔티티 추가
2. 파일 프로퍼티 추가
3. 파일 컨트롤러/DTO/서비스 추가

--- a/module-core/src/main/resources/application.yml
+++ b/module-core/src/main/resources/application.yml
@@ -9,7 +9,10 @@ spring:
       local: local
       prod : prod
       dev : dev
-
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 10MB
 
 logging:
   level:
