chore: 루트 모듈 mockito 라이브러리 추가

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ subprojects {
         developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        testImplementation 'org.mockito:mockito'
         testImplementation 'org.springframework.security:spring-security-test'
     }
 
