ongoing: 채팅 개발중
현재 로그인이 구현되어있지않아 우선적으로 자신을 특정할 수 있는 임시 페이지를 제작함. 다음 제작 포인트 : session이 numSet이라는 LinkedHashSet에 저장되고 이를 통해 메시지를 발송해주는 방식이므로, 현재, session_id와 member_id를 key-value로 갖는 obj를 생성해야함.

--- a/module-core/src/main/resources/application-local.yml
+++ b/module-core/src/main/resources/application-local.yml
@@ -31,4 +31,11 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
 
+    data:
+      mongodb:
+        host: localhost
+        port: 27017
+        authentication-database: admin
+        database: sample
+
 file.dir: C:/saesigDiary/file/
