--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ subprojects {
         developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
-        testImplementation 'org.mockito:mockito'
+        testImplementation 'org.mockito:mockito-core'
         testImplementation 'org.springframework.security:spring-security-test'
     }
 
