--- a/module-core/build.gradle
+++ b/module-core/build.gradle
@@ -10,7 +10,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'com.h2database:h2'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-
+    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7'
 
 }
 
