--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ subprojects {
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
         testImplementation 'org.mockito:mockito-core'
         testImplementation 'org.springframework.security:spring-security-test'
+        implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     }
 
     tasks.named('test') {
