--- a/module-admin/build.gradle
+++ b/module-admin/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     implementation project(':module-core')
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation project(':module-api')
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
