--- a/module-core/src/main/resources/application-local.yml
+++ b/module-core/src/main/resources/application-local.yml
@@ -5,10 +5,10 @@ spring:
       on-profile: local
 
   datasource:
-    jdbc-url: jdbc:h2:mem:testdb;MODE=MySQL
+    jdbc-url: ENC(XDuOfsJUWRovzOS5LjfBEcxhXWnLABmB/7eIYP0uBVQSo8f8Jbi6Pg==)
     driver-class-name: org.h2.Driver
-    username: sa
-    password:
+    username: ENC(Cobw7rxXgtpI+8MddkLPdA==)
+    password: ENC(gjCAJH5mJZ2sDNyZ5rvR9Q==)
 
   h2:
     console: true
