chore: resource 데이터 추가 및 프로퍼티 설정 값 수정

--- a/module-core/src/main/resources/application.yml
+++ b/module-core/src/main/resources/application.yml
@@ -20,6 +20,8 @@ decorator:
     p6spy:
       enable-logging: true
 
+file.dir: C:/saesigDiary/file/
+
 --- #local
 spring:
   config:
@@ -81,6 +83,6 @@ decorator:
     p6spy:
       enable-logging: false
 
----
+--- #defaults
 
 
