--- a/module-core/build.gradle
+++ b/module-core/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     api 'org.springframework.boot:spring-boot-starter-security'
 
     implementation 'com.h2database:h2'
+    implementation 'com.mysql:mysql-connector-j'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7'
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
