--- a/build.gradle
+++ b/build.gradle
@@ -42,3 +42,32 @@ subprojects {
         useJUnitPlatform()
     }
 }
+
+ext.profile = (!project.hasProperty('profile') || !profile) ? 'local' : profile
+
+sourceSets {
+    main {
+        resources {
+            srcDirs "src/main/resources", "src/main/resources-${profile}"
+        }
+    }
+}
+
+project(':module-admin') {
+    dependencies {
+        implementation project(':module-core')
+    }
+}
+
+project(':module-api') {
+    dependencies {
+        implementation project(':module-core')
+    }
+}
+
+project(':module-core') {
+    dependencies {
+        implementation project(':module-core')
+    }
+}
+
