--- a/module-core/build.gradle
+++ b/module-core/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     api 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
     api 'org.springframework.boot:spring-boot-starter-jdbc'
     api 'org.springframework.boot:spring-boot-starter-security'
+    api "com.querydsl:querydsl-jpa:${queryDslVersion}"
+    api "com.querydsl:querydsl-apt:${queryDslVersion}"
 
     implementation 'com.h2database:h2'
     implementation 'com.mysql:mysql-connector-j'
@@ -21,8 +23,6 @@ dependencies {
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7'
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
 
-    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
-    implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 }
 
 test {
