chore: actuator 관련 라이브러리 추가 및 프로퍼티 추가

--- a/module-core/src/main/resources/application.yml
+++ b/module-core/src/main/resources/application.yml
@@ -25,6 +25,23 @@ management:
     web:
       exposure:
         include: "*"
+  endpoint:
+    health:
+#      show-details: always
+      show-components: always
+  info:
+    java:
+      enabled: true
+    os:
+      enabled: true
+    env:
+      enabled: true
+
+info:
+  app:
+    name: hello-actuator
+    company: mekc-saesig
+
 
 --- #local
 spring:
