--- a/module-core/build.gradle
+++ b/module-core/build.gradle
@@ -7,6 +7,7 @@ buildscript {
 plugins {
     id 'java-library'
     id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
+    id 'com.gorylenko.gradle-git-properties' version '2.4.1' // git info
 }
 
 dependencies {
@@ -24,6 +25,11 @@ dependencies {
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7'
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+}
+
+springBoot {
+    buildInfo() // build-info.properties 생성
 }
 
 test {
