chore: actuator tomcat 설정 추가

--- a/module-core/src/main/resources/application.yml
+++ b/module-core/src/main/resources/application.yml
@@ -42,6 +42,10 @@ info:
     name: hello-actuator
     company: mekc-saesig
 
+server:
+  tomcat:
+    mbeanregistry:
+      enabled: true
 
 --- #local
 spring:
