--- a/module-core/build.gradle
+++ b/module-core/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7'
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 
 }
 
