--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ subprojects {
         compileOnly 'org.projectlombok:lombok'
         testCompileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
+        testAnnotationProcessor 'org.projectlombok:lombok'
+
         developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
