chore: redis 라이브러리 추가

--- a/module-admin/build.gradle
+++ b/module-admin/build.gradle
@@ -3,6 +3,7 @@ dependencies {
     implementation project(':module-api')
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
     implementation 'org.springframework.session:spring-session-core'
