refactor : AWS 채팅 테스트를 위한 코드,설정 변경

--- a/module-core/src/main/resources/application.yml
+++ b/module-core/src/main/resources/application.yml
@@ -108,7 +108,7 @@ mybatis:
 
     data:
       mongodb:
-        host: localhost
+        host: 3.38.46.230
         port: 27017
         authentication-database: admin
         database: sample
@@ -143,3 +143,5 @@ decorator:
 --- #defaults
 
 
+server:
+  port: 8090
