--- a/module-admin/build.gradle
+++ b/module-admin/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation 'org.springframework.session:spring-session-core'
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
     implementation group: 'org.qlrm', name: 'qlrm', version: '3.0.1'
+    implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
 
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2'
 
