--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'saesig_diary'
-include 'module-api', 'module-admin', 'module-core', 'module-chat'
+include 'module-api', 'module-admin', 'module-core', 'module-chat', 'module-batch'
 
