feat: 배치 학습 테스트 코드 작성

--- a/build.gradle
+++ b/build.gradle
@@ -68,7 +68,7 @@ project(':module-api') {
 
 project(':module-batch') {
     dependencies {
-        implementation project(':module-core')
+//        implementation project(':module-core')
     }
 }
 
