feat: 관리자 > 설정 파일등록 구현, 파일 관련 익셉션 추가

--- a/module-core/src/main/resources/application.yml
+++ b/module-core/src/main/resources/application.yml
@@ -105,6 +105,7 @@ spring:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
+#    mapper-locations: classpath:mybatis/mappers/**/*.xml
 
     data:
       mongodb:
@@ -114,6 +115,12 @@ mybatis:
         database: sample
 
 file.dir: C:/saesigDiary/file/
+favicon:
+  file-dir: C:/saesigDiary/file/favicon/
+  file-name: favicon
+kakao-thumbnail:
+  file-dir: C:/saesigDiary/file/kakaoThumbnail/
+  file-name: kakaoThumbnail
 
 --- #dev
 spring:
@@ -128,7 +135,6 @@ spring:
     password: ENC(Dg+d3+AOsL04p8sCO8pTuPOd1OmSkm9+)
 
 file.dir: /saesig/dev/file/
-
 --- #prod
 spring:
   config:
