--- a/module-admin/build.gradle
+++ b/module-admin/build.gradle
@@ -11,6 +11,8 @@ dependencies {
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
     implementation group: 'org.qlrm', name: 'qlrm', version: '3.0.1'
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
+    implementation 'org.springframework.session:spring-session-jdbc'
+
 
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2'
 
