--- a/module-admin/build.gradle
+++ b/module-admin/build.gradle
@@ -1,6 +1,5 @@
 dependencies {
     implementation project(':module-core')
-    implementation project(':module-api')
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
@@ -13,6 +12,10 @@ dependencies {
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
     implementation 'org.springframework.session:spring-session-jdbc'
 
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation group: 'javax.mail', name: 'mail', version: '1.4.7'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+    implementation 'net.nurigo:sdk:4.3.0'
 
     testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.2.2'
 
