--- a/module-core/src/main/resources/application.yml
+++ b/module-core/src/main/resources/application.yml
@@ -82,7 +82,7 @@ spring:
           transport: smtp
 
   datasource:
-    jdbc-url: jdbc:mysql://localhost:3306/saesig
+    jdbc-url: jdbc:mysql://localhost:3306/saesig?createDatabaseIfNotExist=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 1234
