--- a/module-core/src/main/resources/application.yml
+++ b/module-core/src/main/resources/application.yml
@@ -110,8 +110,8 @@ spring:
       on-profile: local
 
   datasource:
-    jdbc-url: jdbc:mysql://localhost:3306/saesig?createDatabaseIfNotExist=true
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    jdbc-url: jdbc:mariadb://localhost:3306/saesig?createDatabaseIfNotExist=true
+    driver-class-name: org.mariadb.jdbc.Driver
     username: root
     password: 1234
 
