chore: redis 라이브러리 추가

--- a/module-admin/build.gradle
+++ b/module-admin/build.gradle
@@ -4,9 +4,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-batch'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
     implementation 'org.springframework.session:spring-session-core'
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+
     implementation group: 'org.qlrm', name: 'qlrm', version: '3.0.1'
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
     implementation 'org.springframework.session:spring-session-jdbc'
