chore: Caffeine 캐시 사용을 위한 라이브러리 추가
1. spring-boot-starter-cache
2. com.github.ben-manes.caffeine:caffeine

--- a/module-core/build.gradle
+++ b/module-core/build.gradle
@@ -18,7 +18,9 @@ dependencies {
     api "com.querydsl:querydsl-jpa:${queryDslVersion}"
     api "com.querydsl:querydsl-apt:${queryDslVersion}"
 
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator' // actuator
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'com.github.ben-manes.caffeine:caffeine' // cache
     implementation 'com.h2database:h2'
     implementation 'com.mysql:mysql-connector-j'
     implementation 'org.springframework.boot:spring-boot-starter-web'
